Add styles of sitenav toggler

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 0;
+  margin-top: 80px;
   padding: 0;
   font-family: "Public Sans", "Arial", sans-serif;
   font-size: 16px;
@@ -201,13 +202,18 @@ img {
 .sitenav__toggler {
   display: none;
   width: 30px;
-  height: 17px;
+  height: 30px;
   border: none;
   background: none;
   background-image: url("../img/icon-hamburger.svg");
   background-repeat: no-repeat;
   background-size: 24px 11px;
   background-position: center center;
+}
+
+.sitenav__toggler--changer {
+  background-image: url("../img/icon-close.svg");
+  background-size: 18px 19px;
 }
 
 @media only screen and (max-width: 770px) {
