--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  margin-top: 80px;
   padding: 0;
   font-family: "Public Sans", "Arial", sans-serif;
   font-size: 16px;
