--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -11,6 +11,7 @@
   font-size: 14px;
   line-height: 28px;
   font-weight: 500;
+  text-transform: capitalize;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
