--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -9,11 +9,16 @@
 }
 
 .sitenav__item {
+  position: relative;
+  z-index: 1;
   margin-right: 18px;
   margin-left: 18px;
 
   &:after {
     display: block;
+    position: absolute;
+    z-index: 1;
+    bottom: -28px;
     width: 100%;
     height: 4px;
     background-image: $main-color;
