--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,26 @@ html {
 }
 
 body {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   padding: 0;
-  font-family: serif;
+  font-family: "Public Sans", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  color: #9597A5;
+  background-color: #fafafa;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
 
 .visually-hidden {
@@ -81,5 +98,195 @@ body {
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.easybank-header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.easybank-header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 22px;
+  padding-bottom: 22px;
+}
+
+.easybank-header__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.easybank-header__logo {
+  margin-right: 24px;
+}
+
+.easybank-header__logo-img {
+  display: block;
+  width: 139px;
+  height: 20px;
+}
+
+.sitenav__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: -18px;
+  margin-right: -18px;
+}
+
+.sitenav__item {
+  margin-right: 18px;
+  margin-left: 18px;
+}
+
+.sitenav__item:after {
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  content: "";
+}
+
+.sitenav__item:hover::after {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transform-origin: left 0;
+          transform-origin: left 0;
+}
+
+.sitenav__link {
+  position: relative;
+  z-index: 1;
+  display: block;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: -0.107692px;
+  text-decoration: none;
+  color: #9597A5;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+.sitenav__toggler {
+  display: none;
+  width: 30px;
+  height: 17px;
+  border: none;
+  background: none;
+  background-image: url("../img/icon-hamburger.svg");
+  background-repeat: no-repeat;
+  background-size: 24px 11px;
+  background-position: center center;
+}
+
+@media only screen and (max-width: 770px) {
+  .sitenav {
+    display: none;
+  }
+  .sitenav--open {
+    display: block;
+  }
+  .sitenav {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    left: 0;
+    top: 100%;
+  }
+  .sitenav__list {
+    width: calc(100% - 40px);
+    margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
+    border-radius: 4px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .sitenav__item {
+    padding-bottom: 24px;
+  }
+  .sitenav__item::after {
+    height: 0;
+  }
+  .sitenav__link {
+    padding-top: 0;
+    padding-bottom: 0;
+    color: #2D314D;
+  }
+  .sitenav__toggler {
+    display: block;
+    margin-left: 15px;
+  }
+  .easybank-header--background .sitenav {
+    height: 100vh;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#2D314D), to(rgba(45, 49, 77, 0.0001)));
+    background-image: linear-gradient(180deg, #2D314D 0%, rgba(45, 49, 77, 0.0001) 100%);
+  }
+}
+
+.button {
+  display: block;
+  border: none;
+  background: none;
+  cursor: pointer;
+  text-decoration: none;
+  color: #ffffff;
+  background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
+  border-radius: 22px;
+  padding: 8px 35px;
+  font-size: 14px;
+  line-height: 28px;
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+.button:hover {
+  opacity: 0.4;
+}
+
+@media only screen and (max-width: 500px) {
+  .easybank-header__button {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
