--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -1,5 +1,6 @@
 .easybank-main {
   flex-grow: 1;
+  background-color: #fafafa;
   background-image: url("../img/bg-intro-desktop.svg");
   background-size: 1271px 1034px;
   background-position: right -470px top -260px;
