--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -24,6 +24,12 @@
   .easybank-main {
     background-image: url("../img/bg-intro-mobile.svg");
     background-size: 754px 397px;
-    background-position: right 0px top -100px;
+    background-position: right 10px top -100px;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .easybank-main {
+    background-position: right 0 top -100px;
   }
 }
