--- a/css/main.css
+++ b/css/main.css
@@ -181,10 +181,10 @@ h2, h3 {
   background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
   content: "";
 }
 
@@ -620,5 +620,110 @@ h2, h3 {
     line-height: 25px;
     letter-spacing: -0.234375px;
   }
+}
+
+.articles {
+  background-color: #fafafa;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.articles__heading {
+  font-size: 40px;
+  line-height: 64px;
+  letter-spacing: -0.714286px;
+  text-transform: capitalize;
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+
+.articles__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.articles__item {
+  width: 255px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.article {
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.article__content {
+  padding: 25px 24px 24px;
+}
+
+.article::before {
+  display: block;
+  width: 255px;
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  content: "";
+}
+
+.article:nth-child(1)::before {
+  background-image: url("../img/image-currency.jpg");
+}
+
+.article:nth-child(2)::before {
+  background-image: url("../img/image-restaurant.jpg");
+}
+
+.article:nth-child(3)::before {
+  background-image: url("../img/image-plane.jpg");
+}
+
+.article:nth-child(4)::before {
+  background-image: url("../img/image-confetti.jpg");
+}
+
+.article__owner {
+  font-size: 10px;
+  line-height: 18px;
+  letter-spacing: -0.15625px;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.article__heading {
+  margin-top: 0;
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+
+.article__heading-link {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: -0.285714px;
+  color: #2D314D;
+  text-decoration: none;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+.article__heading:hover .article__heading-link {
+  color: #30C88F;
+}
+
+.article__text {
+  font-size: 13px;
+  line-height: 18px;
+  letter-spacing: -0.203125px;
+  margin: 0;
 }
 /*# sourceMappingURL=main.css.map */
