--- a/css/main.css
+++ b/css/main.css
@@ -126,8 +126,6 @@ h2 {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-top: 22px;
-  padding-bottom: 22px;
 }
 
 .easybank-header__buttons {
@@ -141,6 +139,8 @@ h2 {
 
 .easybank-header__logo {
   margin-right: 24px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .easybank-header__logo-img {
@@ -174,7 +174,7 @@ h2 {
   display: block;
   position: absolute;
   z-index: 1;
-  bottom: -28px;
+  bottom: -27px;
   width: 100%;
   height: 4px;
   background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
@@ -324,6 +324,20 @@ h2 {
   }
 }
 
+@media only screen and (max-width: 915px) {
+  .easybank-main {
+    background-size: 870px auto;
+  }
+}
+
+@media only screen and (max-width: 777px) {
+  .easybank-main {
+    background-image: url("../img/bg-intro-mobile.svg");
+    background-size: 754px 397px;
+    background-position: right 0px top -100px;
+  }
+}
+
 .digitalbank {
   padding-top: 170px;
   padding-bottom: 170px;
@@ -394,9 +408,28 @@ h2 {
   }
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 915px) {
+  .digitalbank__img {
+    width: 420px;
+    height: auto;
+    top: 0;
+    right: 0;
+  }
+}
+
+@media only screen and (max-width: 750px) {
   .digitalbank__content {
-    padding-top: 322px;
+    max-width: calc(100% - 60px);
+    padding-top: 150px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .digitalbank__content-heading {
+    max-width: 327px;
   }
   .digitalbank__img {
     width: 327px;
@@ -405,6 +438,12 @@ h2 {
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
+  }
+}
+
+@media only screen and (max-width: 385px) {
+  .digitalbank__content {
+    max-width: 327px;
   }
 }
 /*# sourceMappingURL=main.css.map */
