--- a/css/main.css
+++ b/css/main.css
@@ -727,4 +727,42 @@ h2, h3 {
   letter-spacing: -0.203125px;
   margin: 0;
 }
+
+@media only screen and (max-width: 1149px) {
+  .articles__item {
+    width: 45%;
+  }
+  .article:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
+
+@media only screen and (max-width: 670px) {
+  .articles {
+    padding-top: 88px;
+    padding-bottom: 88px;
+    text-align: center;
+  }
+  .articles__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: left;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .articles__item {
+    width: 327px;
+  }
+  .article::before {
+    width: 327px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 /*# sourceMappingURL=main.css.map */
