--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -4,7 +4,7 @@
   padding-bottom: 32px;
 }
 
-.easybank-header__logo-img {
+.easybank__logo-img {
   display: block;
   width: 139px;
   height: 20px;
