--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -22,6 +22,10 @@
   opacity: 0.4;
 }
 
+.easybank-footer__button {
+  margin-bottom: 24px;
+}
+
 @media only screen and (max-width: 500px) {
   .easybank-header__button {
     display: none;
