--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -4,6 +4,83 @@
   background-color: #2D314D;
 }
 
+.easybank-footer__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.easybank-footer__logo-social-icons {
+  display: flex;
+  flex-direction: column;
+  margin-right: 131px;
+}
+
+.easybank-footer__logo {
+  margin-bottom: 55px;
+}
+
+.easybank-footer__social-icons {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.easybank-footer__social-icon:not(:last-child) {
+  margin-right: 13px;
+}
+
+.social-icon__link-img {
+  display: block;
+  width: 20px;
+  height: 20px;
+}
+
+.social-icon__link-img path {
+  transition: fill 0.2s ease;
+}
+
+.social-icon:hover .social-icon__link-img path {
+  fill: #30C88F;
+}
+
+.easybank-footer__list {
+  width: 100%;
+  max-width: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin-right: 255px;
+}
+
+.easybank-footer__item {
+  width: 160px;
+}
+
+.footer-item__link {
+  font-size: 15px;
+  letter-spacing: -0.234375px;
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.easybank-footer__item:hover .footer-item__link {
+  color: #30C88F;
+}
+
+.easybank-footer__button-copyrights {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .easybank-footer__copyright {
+  font-size: 15px;
+  letter-spacing: -0.234375px;
   text-transform: capitalize;
+  color: rgba(255, 255, 255, 0.5);
 }
