--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -83,6 +83,7 @@
   letter-spacing: -0.234375px;
   text-transform: capitalize;
   color: rgba(255, 255, 255, 0.5);
+  margin-top: 24px;
 }
 
 @include breakpoint-down (1148px) {
