--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -22,8 +22,9 @@
   opacity: 0.4;
 }
 
-.easybank-footer__button {
-  margin-bottom: 24px;
+.easybank-footer__button-wrapper {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 22px;
 }
 
 @media only screen and (max-width: 500px) {
