Make sitenav to stay in the middle all the time

--- a/css/main.css
+++ b/css/main.css
@@ -126,8 +126,6 @@ h2, h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .easybank-header__buttons {
@@ -141,14 +139,23 @@ h2, h3 {
 
 .easybank-header__logo {
   margin-right: 24px;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .easybank__logo-img {
   display: block;
   width: 139px;
   height: 20px;
+}
+
+@media only screen and (max-width: 770px) {
+  .easybank-header__logo {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+.sitenav {
+  max-width: 600px;
 }
 
 .sitenav__list {
@@ -158,9 +165,14 @@ h2, h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-left: -18px;
   margin-right: -18px;
 }
@@ -176,7 +188,7 @@ h2, h3 {
   display: block;
   position: absolute;
   z-index: 1;
-  bottom: -26px;
+  bottom: 0;
   width: 100%;
   height: 4px;
   background-image: linear-gradient(135deg, #33D35E 0%, #2AB6D9 99.58%);
@@ -205,10 +217,14 @@ h2, h3 {
   letter-spacing: -0.107692px;
   text-decoration: none;
   color: #9597A5;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  -webkit-transition: opacity 0.3s ease;
-  transition: opacity 0.3s ease;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  -webkit-transition: opacity 0.3s ease, color 0.3s ease;
+  transition: opacity 0.3s ease, color 0.3s ease;
+}
+
+.sitenav__item:hover .sitenav__link {
+  color: #2D314D;
 }
 
 .sitenav__toggler {
