--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -1,9 +1,15 @@
+.sitenav {
+  max-width: 600px;
+}
+
 .sitenav__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   margin-left: -18px;
   margin-right: -18px;
 }
@@ -18,7 +24,7 @@
     display: block;
     position: absolute;
     z-index: 1;
-    bottom: -26px;
+    bottom: 0;
     width: 100%;
     height: 4px;
     background-image: $main-color;
@@ -42,9 +48,14 @@
   letter-spacing: -0.107692px;
   text-decoration: none;
   color: $text-color;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  transition: opacity 0.3s ease;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition: opacity 0.3s ease,
+    color 0.3s ease;
+}
+
+.sitenav__item:hover .sitenav__link {
+  color: $dark-text-color;
 }
 
 .sitenav__toggler {
