Fix the problem : )

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -8,6 +8,8 @@
 }
 
 .easybank-header__container {
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
