--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,8 @@ h2, h3 {
 }
 
 .easybank-header__container {
+  position: relative;
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -246,19 +248,19 @@ h2, h3 {
 
 @media only screen and (max-width: 770px) {
   .sitenav {
+    max-width: 100%;
     display: none;
   }
   .sitenav--open {
     display: block;
-  }
-  .sitenav {
     position: absolute;
     z-index: 1;
     width: 100%;
     left: 0;
+    right: 0;
     top: 100%;
   }
-  .sitenav__list {
+  .sitenav--open .sitenav__list {
     width: calc(100% - 40px);
     margin-top: 24px;
     margin-left: auto;
@@ -272,13 +274,13 @@ h2, h3 {
     padding-top: 32px;
     padding-bottom: 32px;
   }
-  .sitenav__item:not(:last-child) {
+  .sitenav--open .sitenav__item:not(:last-child) {
     padding-bottom: 24px;
   }
-  .sitenav__item::after {
+  .sitenav--open .sitenav__item::after {
     height: 0;
   }
-  .sitenav__link {
+  .sitenav--open .sitenav__link {
     padding-top: 0;
     padding-bottom: 0;
     color: #2D314D;
@@ -287,7 +289,8 @@ h2, h3 {
     display: block;
     margin-left: 15px;
   }
-  .easybank-header--background .sitenav {
+  .easybank-header--background .sitenav--open {
+    width: 100vw;
     height: 100vh;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#2D314D), to(rgba(45, 49, 77, 0.0001)));
     background-image: linear-gradient(180deg, #2D314D 0%, rgba(45, 49, 77, 0.0001) 100%);
